<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activity"
            type="com.sizeit.findmysize.FindMySizeSteps5Activity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true">

        <include
            android:id="@+id/header"
            layout="@layout/layout_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:text="@string/step_5_desc"
            android:textColor="@color/colorGrayDark"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_250sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/hips_average"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeading" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvNarrower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:onClick="@{(v)->activity.onViewClicked(v)}"
            android:padding="@dimen/_5sdp"
            android:text="@string/narrower"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/colorGrayDark"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tvAverage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAverage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="?attr/selectableItemBackground"
            android:onClick="@{(v)->activity.onViewClicked(v)}"
            android:padding="@dimen/_5sdp"
            android:text="@string/average"
            android:textColor="@color/colorGrayDark"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tvCurvier"
            app:layout_constraintStart_toEndOf="@id/tvNarrower"
            app:layout_constraintTop_toBottomOf="@id/iv" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCurvier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="?attr/selectableItemBackground"
            android:onClick="@{(v)->activity.onViewClicked(v)}"
            android:padding="@dimen/_5sdp"
            android:text="@string/curvier"
            android:textColor="@color/colorGrayDark"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvAverage"
            app:layout_constraintTop_toBottomOf="@id/iv" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:background="@drawable/bg_round_border"
            android:elevation="0dp"
            android:gravity="center"
            android:onClick="@{(v)->activity.onViewClicked(v)}"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:text="@string/continue_"
            android:textColor="@color/colorGrayDark"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCurvier" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>